[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version = "1.1.0-rc.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourorg/artifact-keeper"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "tokio"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "10.3"
bcrypt = "0.19"

# Checksums
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hmac = "0.12"

# Encryption
aes-gcm = "0.10"

# S3 storage using rust-s3 crate (works with Rust 1.75+)
# fail-on-err: convert non-2xx S3 responses into Err() with full response body
# (without this, PUT responses discard the body and replace it with the ETag header,
# which means S3 error details like AccessDenied are silently lost)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# OpenTelemetry (opt-in via OTEL_EXPORTER_OTLP_ENDPOINT)
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
dotenvy = "0.15"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# HTTP client (for proxy repos)
reqwest = { version = "0.13", features = ["json", "stream", "form"] }

# URL encoding
serde_urlencoded = "0.7"

# Async streams
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
bytes = "1.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# WASM runtime
wasmtime = { version = "24.0.6", features = ["component-model", "async"] }
wasmtime-wasi = "24.0.6"

# Git operations
git2 = "0.20"

# OpenSSL (vendored feature for cross-compilation in release builds)
openssl = { version = "0.10" }
meilisearch-sdk = "0.32"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# XML Digital Signatures (SAML signature verification)
bergshamra = "0.3"
